codepkg/objects/F_42_Invoices__c.object
<CustomObject>
    <fields>
        <fullName>Expense_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Claim</label>
        <referenceTo>Reimbursement__c</referenceTo>
        <relationshipLabel>F-42 Invoices</relationshipLabel>
        <relationshipName>F_42_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_42__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F-42</label>
        <referenceTo>F42__c</referenceTo>
        <relationshipName>F_42_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>F_42_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>F-42-Expense Claim Invoice</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>F-42 Invoicing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F-42 Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>